--- a/style.css
+++ b/style.css
@@ -275,7 +275,11 @@ footer{
     padding: 35px 0;
     color: #fff;
 }
-footer .socials i{
+footer .socials a{
+    text-decoration: none;
+    color: #fff;
+}
+footer .socials a i{
     font-size: 25px;
     margin: 0 15px;
 }
